fixed headers with long single word names to overflow: hidden

--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ h1 {
     text-shadow: 2px 2px rgb(0, 0, 0);
     padding-left: 4%;
     padding-top: 1%;
+    overflow: hidden;
 }
 
 p {
@@ -130,20 +131,41 @@ nav {
     background-color: #000;
 }
 
-#button {
+#searchButton {
     display: inline-block;
     background-color: rgb(18, 41, 83);
     border-radius: 5px;
     border: 3px solid rgb(209, 209, 209);
     color: rgb(255, 255, 255);
     text-align: center;
-    width: 100px;
+    width: 75px;
     height: 50px;
     font-size: 1rem;
     transition: all 0.5s;
     cursor: pointer;
 }
 
+#filterButton {
+    display: inline-block;
+    background-color: rgb(18, 41, 83);
+    border-radius: 5px;
+    border: 3px solid rgb(209, 209, 209);
+    color: rgb(255, 255, 255);
+    text-align: center;
+    width: 50px;
+    height: 50px;
+    font-size: 1rem;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin-left: 10px;
+}
+
+
+.noResults {
+    display: flex;
+    justify-content: center;
+    
+}
 
 /* .content {
 
@@ -153,7 +175,7 @@ footer {
     background-color: rgb(18, 41, 83);
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 414px;
     position: fixed;
     bottom: 0;
     text-shadow: 2px 2px rgb(0, 0, 0);
